Revision history for DBIx::Class

0.06999_03 at some point
        - Changed join merging to not create a rel_2 alias when adding a join
          that already exists in a parent resultset

0.06999_02 2006-06-09 23:58:33
        - Fixed up POD::Coverage tests, filled in some POD holes
        - Added a warning for incorrect component order in load_components
        - Fixed resultset bugs to do with related searches
        - added code and tests for Componentized::ensure_class_found and
          load_optional_class
        - NoBindVars + Sybase + MSSQL stuff
        - only rebless S::DBI if it is still S::DBI and not a subclass
        - Added `use' statement for DBD::Pg in Storage::DBI::Pg
        - stopped test relying on order of unordered search
        - bugfix for join-types in nested joins using the from attribute
        - obscure prefetch problem fixed
        - tightened up deep search_related
        - Fixed 'DBIx/Class/DB.pm did not return a true value' error
        - Revert change to test for deprecated find usage and swallow warnings
        - Slight wording change to new_related() POD
        - new specific test for connect_info coderefs
        - POD clarification and content bugfixing + a few code formatting fixes
        - POD::Coverage additions
        - fixed debugfh
        - Fix column_info stomping

0.06999_01 2006-05-28 17:19:30
        - add automatic naming of unique constraints
        - marked DB.pm as deprecated and noted it will be removed by 1.0
        - add ResultSetColumn
        - refactor ResultSet code to resolve attrs as late as poss
        - merge prefetch attrs into join attrs
        - add +select and +as attributes to ResultSet
        - added InflateColumn::DateTime component
        - refactor debugging to allow for profiling using Storage::Statistics
        - removed Data::UUID from deps, made other optionals required
        - modified SQLT parser to skip dupe table names