@@ -3,6 +3,7 @@ Revision history for DBIx::Class
 0.06999_03 at some point
         - Changed join merging to not create a rel_2 alias when adding a join
           that already exists in a parent resultset
+        - InflateColumn::DateTime supports date as well as datetime
 
 0.06999_02 2006-06-09 23:58:33
         - Fixed up POD::Coverage tests, filled in some POD holes
